--- a/templates/risultati6dyn.html
+++ b/templates/risultati6dyn.html
@@ -15,7 +15,7 @@
   <img alt="Particolare del manoscritto" src="{{codice['immagine_banner']}}" class="img-fluid mb5" id="imgmanu"
     width="1200">
   <div class="mantext"><abbr class="unapi-id"
-      title={{codice['segnatura_idx']}}>{{codice['descrizione_esterna'][0]['Segnatura']}}</abbr></div>
+      title="{{codice['segnatura_idx']}}">{{codice['descrizione_esterna'][0]['Segnatura']}}</abbr></div>
 </div>
 <div class="container py-3 px-0" id="scheda">
   <div class="row">
